<resources>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyDaXYhPWwt1uhPXzkH8AA56eqM6_h-_h2E</string>
    <string name="app_name">Botca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_info">Information</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_address">Address</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_cart_remove">Cart Remove</string>
    <string name="menu_coupons">Coupons</string>
    <string name="menu_email">Email</string>
    <string name="error_title">Error!</string>
    <string name="alert_title">Alert!</string>
    <string name="error_message">There was a problem with the server</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Aceptar</string>
    <string name="email_botca">info@botca.store</string>
    <string name="subject">Information</string>
    <string name="body">Hi, my name is...</string>
    <string name="loading_login">LOADING INFORMATION</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="guest">Guest</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="welcome_to_botca">Welcome to Botca</string>
    <string name="google_sign_in_canceled">You canceled your Google sign-in</string>
    <string name="update_version">Update Now!</string>
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="full_name">Full Name</string>
    <string name="type_full_name">Type Full Name</string>
    <string name="email">Email</string>
    <string name="type_email">Type Email</string>
    <string name="phone">Phone</string>
    <string name="type_phone">Type Phone</string>
    <string name="complete_data">Please Complete Data to Continue</string>
    <string name="loading_categories">LOADING CATEGORIES</string>
    <string name="hi">Hi</string>
    <string name="hi_guest">Guest!</string>
    <string name="please_login">Please Sign Up to use features</string>
    <string name="loading_products">LOADING PRODUCTS</string>
    <string name="addresses_title">My Addresses</string>
    <string name="cards_title">My Cards</string>
    <string name="orders_title">My Orders</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="profile_title">My Profile</string>
    <string name="sign_out_ask">Do you want to Sign Out?</string>
    <string name="not_favorites">Please add product to wishlist</string>
    <string name="loading_payments">LOADING PAYMENTS</string>
    <string name="addresses_title_view">Addresses</string>
    <string name="loading_addresses">LOADING ADDRESSES</string>
    <string name="please_add_address">Please Add Address</string>
    <string name="deleting_address">DELETE ADDRESS</string>
    <string name="loading_countries">LOADING COUNTRIES</string>
    <string name="filter_by_size">Filter by Size</string>
    <string name="filter_by_color">Filter by Color</string>
    <string name="search">Search</string>
    <string name="filter_product_title_view">Filter Product</string>
    <string name="add_addresses_title_view">Add Address</string>
    <string name="country">País</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="reference">Reference (optional)</string>
    <string name="delivery_by">Delivery by Name</string>
    <string name="id">ID</string>
    <string name="postal_code">Zip Code</string>
    <string name="add_address">UPLOAD ADDRESS</string>
    <string name="loading_provinces">LOADING PROVINCES</string>
    <string name="loading_cities">LOADING CITIES</string>
    <string name="notCity">Can\'t find your city?</string>
    <string name="purchase_success_title_view">Purchase Success</string>
    <string name="info_title_view">Information</string>
    <string name="loading_delete">LOADING DELETE</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="body_subtitle">Delete account in BOTCA: We want to make sure that you really want to carry out this action.\n\nDeleting your account will mean the permanent loss of all your data and settings associated with it. If you are sure you want to proceed, please confirm your decision by clicking on the following button:\n\nIf you dont want to delete your account and you think this was an error, ignore this message and your account will remain active.\n\nThank you for being part of our community.</string>
    <string name="delete_ask">Are you sure you want to delete your account?</string>
    <string name="pdf_info_title_view">PDF Info</string>
    <string name="cards_title_view">Cards</string>
    <string name="loading_cards">LOADING CARDS</string>
    <string name="last_numbers">Last Numbers:</string>
    <string name="exp_date">Exp Date:</string>
    <string name="please_add_cards">Please Add Card</string>
    <string name="add_card_title_view">Add Card</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Número de la tarjeta</string>
    <string name="card_name">Nombre de la tarjeta</string>
    <string name="uploading_card">UPLOAD CARD</string>
    <string name="coupon_title_view">Coupon</string>
    <string name="shop_now_title_button">Shop Now!</string>
    <string name="discount_title">DISCOUNT COUPON</string>
    <string name="discount_value">15 %</string>
    <string name="discount_off">OFF</string>
    <string name="discount_subtitle">Enjoy your 15 % OFF on your first purchase! Celebrating that you are now part of our team</string>
    <string name="wishlist_title_view">Favorites</string>
    <string name="loading_favorites">LOADING FAVORITES</string>
    <string name="sizes">Sizes</string>
    <string name="description">Description</string>
    <string name="size_guide">Size Guide</string>
    <string name="loading_cart">LOADING CART</string>
    <string name="no_products_in_cart">Not Products in Cart</string>
    <string name="loading_product">LOADING PRODUCT</string>
    <string name="loading_data">LOADING DATA</string>
    <string name="upload_to_cart">UPLOAD TO CART</string>
    <string name="colors">Colors</string>
    <string name="count">Counts</string>
    <string name="add_cart_button">Add to Cart</string>
    <string name="need_help_sizes">Need help with the sizes?</string>
    <string name="product_added">Product added to Cart</string>
    <string name="cart_title_view">Cart</string>
    <string name="deleting_card">DELETE CARD</string>
    <string name="about_us_title_view">About Us</string>
    <string name="about_us_title">Welcome to Botca!</string>
    <string name="about_us_subtitle">At BOTCA, we understand that fashion is more than just clothing; It is an expression of style, personality and confidence. Founded in the heart of Ecuador, we are an innovative platform that brings a unique shopping experience to your fingertips, fusing comfort with elegance for teenagers and women of all ages.</string>
    <string name="about_us_op_one_title">Our mission</string>
    <string name="about_us_op_one_subtitle">Our mission is to redefine the way you relate to fashion. We stand out by offering a careful selection of garments that encapsulate the essence of CLASSY CHIC style, fusing the comfort you need with the sophistication you deserve.</string>
    <string name="about_us_op_two_title">That makes us different?</string>
    <string name="about_us_op_two_subtitle">In a market saturated with options, BOTCA stands out for bringing a fresh and unique proposal. We are not just a clothing store, we are an experience.</string>
    <string name="about_us_op_three_title">Join Our Community</string>
    <string name="about_us_op_three_subtitle">We invite you to explore our exclusive selection and be part of our community of fashion lovers who are looking for a style that makes you feel very confident so that you can project yourself as a superwoman. At BOTCA, fashion is not just a trend, it is a way of life.</string>
    <string name="about_us_footer">Thank you for choosing us to be your preferred fashion destination!</string>
    <string name="contact_button">Contact</string>
    <string name="cart_title_button">Check Out</string>
    <string name="total_value">Total: $</string>
    <string name="delivery_cost_value">Delivery Cost: $</string>
    <string name="sub_total_cost_value">SubTotal: $</string>
    <string name="delivery_address_title">Delivery Address:</string>
    <string name="delivery_address_value">Choose your address</string>
    <string name="payment_method_title">Payment Method:</string>
    <string name="payment_method_value">Choose your payment method</string>
    <string name="discount_choose_title">Discount:</string>
    <string name="discount_choose_value">Discount applied</string>
    <string name="coupons_title">Coupons:</string>
    <string name="coupons_value">Choose your dicount</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="deleting_product">DELETE PRODUCT</string>
    <string name="delete_cart_question">Do you want to delete your cart?</string>
    <string name="delete_cart">Delete</string>
    <string name="update_cart">UPDATE CART</string>
    <string name="loading_coupons">LOADING COUPONS</string>
    <string name="choose_discount">Choose your discount</string>
    <string name="card">CARD</string>
    <string name="transfer">Transfer</string>
    <string name="upload_transfer">UPLOAD TRANSFER</string>
    <string name="choose_payment_method">Choose a payment method please</string>
    <string name="please_add_card">Please Add Card</string>
    <string name="loading_payment">LOADING PAYMENT</string>
    <string name="no_coupons_in_cart">Not coupons in this moment</string>
    <string name="thanks_purchases">Thanks!</string>
    <string name="payments_methods_title">Payments Methods</string>
    <string name="payments_methods_card">Card</string>
    <string name="payments_methods_transfer">Transfer</string>
    <string name="transfer_title">Transfer</string>
    <string name="add_transfer_title_view">Add Transfer</string>
    <string name="notes">Notes</string>
    <string name="transfer_image_explication">Transfer the money and upload the invoice. Push the image to upload the invoice</string>
    <string name="please_choose_from_gallery">Please choose a image from gallery</string>
    <string name="coupons_title_view">Coupons</string>
    <string name="product_image_title_view">Product Image</string>
    <string name="my_orders_title_view">My Orders</string>
    <string name="cards">Cards</string>
    <string name="transfers">Transfers</string>
    <string name="progress">PROGRESS</string>
    <string name="paid">PAID</string>
    <string name="delivered">DELIVERED</string>
    <string name="refund">REFUND</string>
    <string name="my_orders_detail_title_view">Detail</string>
</resources>