<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.cart.view.CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/coupons_layout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/coupons_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/discount_layout_id">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="left|center"
            android:text="@string/coupons_title"
            android:textColor="@color/blackColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coupons_text_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center"
            android:drawableRight="@drawable/chevron_icon"
            android:drawablePadding="4dp"
            android:text="@string/coupons_value"
            android:textColor="@color/blackColor"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/discount_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/payment_method_layout_id">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="left|center"
            android:text="@string/discount_choose_title"
            android:textColor="@color/blackColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/discount_text_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center"
            android:layout_marginRight="30dp"
            android:text="@string/discount_choose_value"
            android:textColor="@color/redColor"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_method_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/delivery_address_layout_id">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="left|center"
            android:text="@string/payment_method_title"
            android:textColor="@color/blackColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/payment_method_text_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center"
            android:drawableRight="@drawable/chevron_icon"
            android:drawablePadding="4dp"
            android:text="@string/payment_method_value"
            android:textColor="@color/blackColor"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delivery_address_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/subtotal_text_id">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="left|center"
            android:text="@string/delivery_address_title"
            android:textColor="@color/blackColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address_text_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center"
            android:drawableRight="@drawable/chevron_icon"
            android:drawablePadding="4dp"
            android:text="@string/delivery_address_value"
            android:textColor="@color/blackColor"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/subtotal_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:gravity="right|center"
        android:text="@string/sub_total_cost_value"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delivery_cost_text_id"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/delivery_cost_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:text="@string/delivery_cost_value"
        android:textColor="@color/blackColor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/total_text_id" />

    <TextView
        android:id="@+id/total_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:text="@string/total_value"
        android:textColor="@color/blackColor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/check_out_id" />

    <Button
        android:id="@+id/check_out_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/blackColor"
        android:text="@string/cart_title_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>