<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.aboutus.view.AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/whiteColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/coupontitle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_title"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_subtitle"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_one_title"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_one_subtitle"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_two_title"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_two_subtitle"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_three_title"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_op_three_subtitle"
                    android:textColor="@color/blackColor"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <Button
                    android:id="@+id/contact_id"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/whiteColor"
                    android:backgroundTint="@color/blackColor"
                    android:text="@string/contact_id"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>