<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrayColor"
    tools:context=".customer.coupon.view.CouponActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/coupontitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount_title"
            android:textColor="@color/blackColor"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            android:gravity="center"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/discount_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount_value"
            android:textColor="@color/blackColor"
            android:layout_marginTop="8dp"
            android:textSize="130sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount_off"
            android:textColor="@color/blackColor"
            android:layout_marginTop="8dp"
            android:textSize="70sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount_subtitle"
            android:textColor="@color/blackColor"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/shop_now_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:textColor="@color/whiteColor"
            android:backgroundTint="@color/blackColor"
            android:text="@string/shop_now_title_button"/>

    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>